[package]
name = "gridly"
version = "0.2.0"
authors = ["Nathan West <Lucretiel@gmail.com>"]
edition = "2018"
readme = "README.md"
license = "MPL-2.0"
description = "A library for managing fixed-size 2D spaces"
repository = "https://github.com/Lucretiel/gridly-rs"
categories = [
	"no-std",
	"data-structures",
	"games"
]

[badges]
travis-ci = { repository = "Lucretiel/gridly-rs" }
maintenance = { status = "actively-developed" }
