[package]
name = "gridly_grids"
version = "0.3.4"
authors = ["Nathan West <Lucretiel@gmail.com>"]
edition = "2018"
description = "Some basic implementations of gridly grids"
license = "MPL-2.0"
repository = "https://github.com/Lucretiel/gridly-rs"
readme = "README.md"
categories = [
	"games"
]

[dependencies]
gridly = { path = "../gridly", version = "0.7.1" }

[badges]
travis-ci = { repository = "Lucretiel/gridly-rs" }
maintenance = { status = "actively-developed" }

